feat: udpated swagger docs
